tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__WorkingTable20-AAAAAAAAAAAAAAAAAAACQA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 576,
  "prerequisites": [
    586
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A manual crafting table which remembers the last nine used recipes. Left-click one of the recipes shown in the right-hand side to automatically fill in the crafting grid. Right-click to lock a memorized recipe and prevent a newer recipe from bumping it off.\n\nResources need to go into the internal inventory. The crafting matrix is only a visual representation.\n\nThe Forestry worktable is super-useful, and can reduce the tedium of many common jobs because you can click-drag across a row of items, and it will use tools in its own inventory to continue crafting.\n\nSpecifically:\nMaking <Item X> with <Bucket of Y> - Put all the ingredients into the table, and if the recipe is selected, shift-click the result to craft them all at once (until you run out)\nMaking fresh water for Pam's - Same as above, but no second item\nMaking clay bricks - The wooden form is automatically reused\nMaking anything that uses a tool - Also automatically reused, while consuming durability\n\n[warn]Warning: Stored recipes will be lost if the worktable is broken! To avoid this, move it using a dolly.[/warn]\n\n[note]For more forestry quests you need to go to the dedicated tab.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Working Table 2.0",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    586
  ],
  "rewards": [],
  "tasks": []
}
