tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__YourFirstFlintTh-AAAAAAAAAAAAAAAAAAADYA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 864,
  "prerequisites": [
    33
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Is the bone bow too expensive for your taste? Then make a flint throwing knife instead. You need flint and a stick to get 12 knives. The durability and the attack damage are very low but it still helps with killing mobs from a safe distance.\n\nThe knives should be in your inventory if you want to pick up the ones you fired.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lYour First Flint Throwing Knife",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    33
  ],
  "rewards": [],
  "tasks": []
}
