tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__YourFirstLongRan-AAAAAAAAAAAAAAAAAAABwg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 450,
  "prerequisites": [
    11
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can't make a vanilla bow or Tinkers weapons yet, but you can make a spear!\n\nSome monsters will become much easier to kill with this long-range weapon.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lYour First 'Long Range' Weapon",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11
  ],
  "rewards": [],
  "tasks": []
}
